--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
 
 <iframe width="1000" height="800" src="https://www.youtube.com/embed/9Frow8HMh74" frameborder="0"></iframe>
 
+<div class="container">
+
+    <h2 class="page-header" id="travel">Campus life</h2>
+  
+    <center>
+  <div class="travel_mainDiv">
+    <img src="church.jpg">
+  
+    <h4 class="text-capitalize"> <kbd> school church</kbd></h4>\
+  
+    <hr >
+  
+    <h5 class="text-success text-capitalize"> was established in 1978</h5>
+  
+      
+  <p class="text-muted" > its a school church </p>
+  </div>
 </body>
 
 </html>
