--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 
   <h2 class="page-header" id="movies">Achievements</h2>
 
-<div class="bg-primary movie_head" data-toggle="collapse" data-target="#avengers_endgame">
+<div class="bg-primary movie_head" data-toggle="collapse" data-target="#a">
 </span>Interschool debate on environment pollution<i class="fa fa-sort-desc"></i>
 </div>
 
-<div id="avengers_endgame" class="collapse">
+<div id="a" class="collapse">
 
   <div class="movie_text">
     <img src="se1.jpg" class="img-responsive img-thumbnail">
@@ -113,12 +113,68 @@
 <span class="glyphicon glyphicon-star"></span>
 <span class="glyphicon glyphicon-star"></span>
     </h5>
-    <p></p>
+    <p> they won</p>
   </div>
 </div>
+<div class="bg-primary movie_head" data-toggle="collapse" data-target="#av">
+</span>Interschool football competition<i class="fa fa-sort-desc"></i>
+</div>
+
+<div id="av" class="collapse">
+
+  <div class="movie_text">
+    <img src="sm2.jpg" class="img-responsive img-thumbnail">
+    <h5 class="text-success text-capitalize"> came second
+<span class="glyphicon glyphicon-star"></span>
+<span class="glyphicon glyphicon-star"></span>
+<span class="glyphicon glyphicon-star"></span>
+<span class="glyphicon glyphicon-star"></span>
+<span class="glyphicon glyphicon-star"></span>
+    </h5>
+    <p>they almost won</p>
+  </div>
+  </div>
+  <div class="bg-primary movie_head" data-toggle="collapse" data-target="#ave">
+  </span>Interschool science project competition<i class="fa fa-sort-desc"></i>
+  </div>
+  
+  <div id="ave" class="collapse">
+  
+    <div class="movie_text">
+      <img src="sm3.jpg" class="img-responsive img-thumbnail">
+      <h5 class="text-success text-capitalize"> came second place
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+      </h5>
+      <p>they almost won</p>
+    </div>
+  
+
+
 
 </div>
 
+<h2 class="page-header" id="new">what's new</h2>
+
+<ul class="list group">
+  <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<h4>New School Canteen</h4>
+<img src="canteen.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+<p class="light-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">The food options and responsibilities to consider, canteens must be better organised and more efficient than they have been in the past. Online menus with photographs of the meals prepared, and detailed descriptions of their ingredients help both students and parents make the right nutritional choices. Each student or staff member who accesses the canteen could be provided with a School Canteen Account on the school website that keeps track of their previous meal choices and any dietary requirements they may have. Ordering online by ticking a box and paying for meals online can eliminate all the fuss of money handling, making it safer and less complicated for staff and students alike. Here again, diversity is the key.</p>
+  </li>
+
+  <li class="list-group-item list-group-item-warning col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <h4>Implemented Online Attendance Management System</h4>
+    <img src="attendance.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+    <p class="light-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">
+      Implemented Online Attendance Management System: This informs parents about their child's/children's activities in the school, instantly. Once a student reaches the school, the parents will be informed about the status via text messages. This helps schools keep a record of the students’ absenteeism. Students can mark the attendance by logging in, and this is stored in a database, which can later be checked by the Admin. The tracker has so much potential that it can identify which students are irregular to their classes and not ready to establish connectivity with the actual concepts of their curriculum’s subjects. As soon as you enter a student’s Enrollment Number or Name, details like availability in classes, number of lectures attended will be displayed and no proxies are possible since the tracker is supported by cloud capabilities. Even the security offered can be so robust and powerful that those students who always fool their deans are caught in a shorter span – just after the admin enters login details
+    </p>
+      </li>
+
+</ul>
   </div>
 </body>
 
